include root flow in the list